[project]
name = "formtool"
version = "0.1.0"
description = "ffmpeg command shortcuts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hypy-utils>=1.0.29",
]

[project.scripts]
formtool = "formtool.cli:cli"
fav1 = "formtool.av1:main"
fx264 = "formtool.x264:main"
fmp3 = "formtool.mp3:main"
fopus = "formtool.opus:main"
fflac = "formtool.flac:main"
