[project]
name = "formtool"
version = "0.1.0"
description = "ffmpeg command shortcuts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hypy-utils>=1.0.29",
]

[project.scripts]
formtool = "formtool.cli:cli"
fav1 = "formtool.cli:av1"
fx264 = "formtool.cli:x264"
fmp3 = "formtool.cli:mp3"
fopus = "formtool.cli:opus"
fflac = "formtool.cli:flac"
